fix collapsing header and footer staying to the top when small content

--- a/src/components/Menu/DynamicMenu/styles.css
+++ b/src/components/Menu/DynamicMenu/styles.css
@@ -1,9 +1,7 @@
 @import '../../../styles/timing.css';
 
 .menu {
-  /*display: table;*/ /*remove horizontal scroll*/
-  max-width: 100vw;
-  overflow-x: hidden;
+  display: flex;
 }
 
 .menu-item {
