--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,9 @@
+:global(#root) {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 
+  & > main {
+    flex: 1;
+  }
+}
